<resources>
    <string name="app_name">Picssshare</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="membership">Not a member? Sign up now.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="repeat_password">repeat password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="err_required">this field is required</string>
    <string name="err_pass">Password doesn\'t match</string>
    <string name="err_email">Non valid email</string>
    <string name="err_username_exists">User with this username already exists</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="img1">https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg</string>
    <string name="img2">https://images.pexels.com/photos/257840/pexels-photo-257840.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=350</string>
    <string name="img3">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLb5mOUtzV0ObqBVuAURSvPAsC27148aFdKGc6e6Z_Z78vmMWf</string>
    <string name="img4">https://wallpaperbrowse.com/media/images/img_fjords.jpg</string>
    <string name="img5">https://www.oxforduniversityimages.com/images/rotate/Image_Spring_17_1.gif</string>
    <string name="img6">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbhm9H82dzJSEjhTrqey1xr_bg3FtMySh69eaKae1KK_Xm9PW6</string>
    <string name="img7">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxiPi1-H5Y9tTmVenTmTyXoOgbQ-ek36v4Rk5akoZ25ECMj7jcgg</string>
    <string name="img8">https://techcrunch.com/wp-content/uploads/2018/03/gettyimages-705351545.jpg?w=730&amp;crop=1</string>
    <string name="img9">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT67u-Nbax1CScuoXegUoVbDElmwMBr8viXk4nKo1pbgxqJEWxZSg</string>
    <string name="img10">https://static3.gamespot.com/uploads/original/1179/11799911/3204736–1.jpg</string>
    <string name="img11">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlWHpVoNYhirK-z_TVnOPblLKvS0YbGrSS2OO9zYBkp1HyXQu5</string>
    <string name="img12">http://www.nhm.ac.uk/content/dam/nhmwww/visit/Exhibitions/art-of-british-natural-history/magpie-illustration-keulemans-two-column.jpg</string>
    <string name="img13">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqrfVof7CYYRtsdCu1VD4AWoPB2gs25PP5hQAuhOwhZngrOhsS</string>
    <string name="img14">http://www.qygjxz.com/data/out/128/4185708-images-of-wallpaper.jpg</string>
    <string name="img15">http://www.qygjxz.com/data/out/128/5553556-images-of-wallpaper.jpg</string>
    <string name="img16">https://cdn.vox-cdn.com/thumbor/CDwac_nCcPBl-4rmi1BKg6rhtRA=/0x0:3975x2640/1200x800/filters:focal(1670x1002:2306x1638)/cdn.vox-cdn.com/uploads/chorus_image/image/58641295/913011958.jpg.0.jpg</string>
    <string name="profile1">https://www.ienglishstatus.com/wp-content/uploads/2018/04/Anonymous-Whatsapp-profile-picture.jpg</string>
    <string name="profile2">http://bdfjade.com/data/out/142/6448580-profile-pictures.jpg</string>
    <string name="profile3">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToEbDIkAbRgyWBU11ZWmHhVydMj-Yqhi8an0kJhvcYIcxospVaxA</string>
    <string name="profile4">https://demos.subinsb.com/isl-profile-pic/image/person.png</string>
    <string name="profile5">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUv1dndYuVV9gfYpOWFEsPDNkuIFUdIDmur—ijTyBWDzyDM2W</string>
</resources>
