<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_btn_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_btn_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_btn_upload"
        android:enabled="true"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_btn_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_btn_account"
        android:enabled="true"
        android:icon="@drawable/ic_account_box"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>